--- a/SampleLoginPage/css/webpage.css
+++ b/SampleLoginPage/css/webpage.css
@@ -36,7 +36,7 @@
 			margin-left:5vw;
 			margin-bottom: 1%;
 			list-style-type: none;
-			background-color: #ffd32a;
+			background-color: #2196f3    ;
 			color: white;
 			border-radius: 0px 20px 20px 0px;
 			font-size: 1.3vw; 
@@ -102,4 +102,36 @@
   transform: translate(-50%, -50%);
   text-align: center;
   border-radius:50%;
+}
+#board{
+	background-color: white;
+	position: absolute;
+	height:80%;
+	width:83.5%;
+	margin-left: 15%;
+	margin-top: 2%;
+	border-radius: 20px;
+	opacity: 0.7;
+}
+#th1{
+	width: 22vw;
+	height: 10vw;
+	background-color: black;
+	border-radius: 10px;
+}
+#th1 img{
+	width:8vw;
+	margin-top: -10vw;
+}
+#th2{
+	width: 40vw;
+	height: 37.8vw;
+	background-color: black;
+	border-radius: 10px;	
+}
+#th3{
+	width: 22vw;
+	height: 37.8vw;
+	background-color: black;
+	border-radius: 10px;
 }
