--- a/SampleLoginPage/css/webpage.css
+++ b/SampleLoginPage/css/webpage.css
@@ -104,34 +104,35 @@
   border-radius:50%;
 }
 #board{
-	background-color: white;
+	background-color:white;
 	position: absolute;
 	height:80%;
 	width:83.5%;
 	margin-left: 15%;
 	margin-top: 2%;
 	border-radius: 20px;
-	opacity: 0.7;
+	background-size: cover; 
 }
 #th1{
-	width: 22vw;
-	height: 10vw;
-	background-color: black;
+	width: 20%;
+	height: 100%;
 	border-radius: 10px;
+	float: left;
 }
 #th1 img{
-	width:8vw;
-	margin-top: -10vw;
+	width: 80%;
+	margin-left: 10%;
+	margin-top: 20%;	
 }
 #th2{
-	width: 40vw;
-	height: 37.8vw;
-	background-color: black;
-	border-radius: 10px;	
+	width: 60%;
+	float: left;
+	height: 100%;
+	border-radius: 10px;
 }
 #th3{
-	width: 22vw;
-	height: 37.8vw;
-	background-color: black;
+	width: 20%;
+	float: left;
+	height: 100%;
 	border-radius: 10px;
 }
