--- a/SampleLoginPage/css/style.css
+++ b/SampleLoginPage/css/style.css
@@ -55,7 +55,7 @@
 
 #register_btn{
 	margin-top:10px;
-	margin-bottom:20px;
+	margin-bottom:3%;
 	background-color:#3498db;
 	padding:5px;
 	color:white;
@@ -64,6 +64,30 @@
 	font-size:18px;
 	font-weight:bold;
 	border-radius:15px;
+}
+
+#feedback_btn{
+	background-color:#e74c3c;
+	padding:5px;
+	color:white;
+	width:40%;
+	text-align:center;
+	font-size:18px;
+	font-weight:bold;
+	border-radius:15px;
+}
+#contactme_btn{
+	
+	background-color:#e74c3c;
+	padding:5px;
+	margin-left: 5%;
+	color:white;
+	width:40%;
+	text-align:center;
+	font-size:18px;
+	font-weight:bold;
+	border-radius:15px;
+	
 }
 
 #signup_btn{
