--- a/SampleLoginPage/css/webpage.css
+++ b/SampleLoginPage/css/webpage.css
@@ -103,36 +103,105 @@
   text-align: center;
   border-radius:50%;
 }
+
 #board{
-	background-color:white;
+	background-color: white;
 	position: absolute;
 	height:80%;
 	width:83.5%;
 	margin-left: 15%;
 	margin-top: 2%;
 	border-radius: 20px;
-	background-size: cover; 
+	background-color: rgba(255,255,255,0.5);
 }
 #th1{
-	width: 20%;
-	height: 100%;
+	width: 22vw;
+	height: 10vw;
 	border-radius: 10px;
-	float: left;
+	/*background-color: black;*/
 }
 #th1 img{
-	width: 80%;
-	margin-left: 10%;
-	margin-top: 20%;	
+	width:10vw; 
 }
 #th2{
-	width: 60%;
-	float: left;
-	height: 100%;
-	border-radius: 10px;
+	width: 40vw;
+	height: 37.8vw;
+	border-radius: 10px;	
+	/*background-color: black;*/
 }
 #th3{
-	width: 20%;
-	float: left;
+	width: 20vw;
 	height: 100%;
 	border-radius: 10px;
+	/*background-color: black;*/
+}
+.bulletl{
+	border-radius: 50%;
+	width: 4vw;
+	height: 4vw;
+	margin-left: 0.5vw;
+	margin-top: 0.5vw;
+	background-color: #0984ff;
+	float:left;
+}
+.bulletr{
+	border-radius: 50%;
+	width: 4vw;
+	height: 4vw;
+	margin-top: 0.5vw;
+	margin-right: 0.5vw;
+	float:right;
+}		
+.buttonwrapper{
+	background-color: white;
+	width: 20vw;
+	height:5vw;
+	border-radius: 15vw;
+	margin-top: 5px;
+	margin-left: 1vw;
+}
+label{
+	margin-top: 1.5vw;
+	display: inline-block;
+	text-align: center;
+	word-wrap: break-word;
+	display: inline-block;
+}
+.monthPre{
+ color: white;
+ text-align: center;
+}
+.monthNow{
+ color: #FFFFFF;
+ text-align: center;
+}
+.dayNow{
+ color: #03A9F4;
+ text-align: center;
+ background-color: #FFFFFF;
+ border-radius: 50%;
+
+}
+.calendar td{
+padding: 3%; 
+}
+.monthNow th{
+ color: #FFFFFF;
+ text-align: center;
+ font-size: 2vw;
+ padding: 3%;
+}
+.dayNames{
+ color: #FFFFFF;
+ text-align: center;
+}
+.calendar{
+  border-collapse: collapse;
+  background-color: #03A9F4;
+  border-radius: 0px 15px 0px 0px;
+  width: 100%;
+  font-family: Comic Sans MS;
+  font-size: 1vw;
+  margin-top: -15.6vw;
+  margin-right: -10vw;
 }
